--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,7 @@ steps:  # Build step 0
   args: [
           'build',
           '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:nginx-latest-image', # Project folder path for building artifacts
+          '--cache-from', 'gcr.io/$PROJECT_ID/$REPO_NAME:nginx-latest-image'
           '-f', 'Dockerfile', # Docker layer info file
           '.'
         ] # Build command
