--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:  # Build step 0
-- name: 'pull'
+- name: 'gcr.io/cloud-builders/docker'
   args: ['pull', 'gcr.io/$PROJECT_ID/$REPO_NAME:nginx-latest-image']
 - name: 'gcr.io/cloud-builders/docker' # Official builder path
   dir: 'stable/alpine'
